improve character endpoints
